Revert "atualização segundo exercício"

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,24 +1,2 @@
-quarkus.hibernate-orm.log.sql=false
-
-quarkus.log.level=INFO
-quarkus.log.category."br.edu.ada=DEBUG
-
-quarkus.log.enable=true
-quarkus.log.color=true
-quarkus.log.console.format=%d{HH:mm:ss,SSS} %-5p [%c{2.}] (%t) %s%e%n
-
-quarkus.log.file.enable=false
-quarkus.log.file.path=logs/application.log
-quarkus.log.file.rotation.max-file-size=10M
-quarkus.log.file.rotation.max-backup-index=5
-
-%dev.quarkus.log.console.json.enabled=false
-
-quarkus.hibernate-orm.schema-management.strategy=drop-and-create
-quarkus.http.port=8081
-
-quarkus.oidc.auth-server-url=http://localhost:53355/realms/produto-manager
-quarkus.oidc.client-id=gerenciador-produto
-quarkus.oidc.credentials.secret=caixa-verso
-quarkus.oidc.authentication.redirect-path=/produtos
-quarkus.oidc.application-type=service
+quarkus.http.cors.enabled=true
+%dev.quarkus.http.cors.origins=/.*/
