--- a/src/main/docker/Dockerfile.jvm
+++ b/src/main/docker/Dockerfile.jvm
@@ -82,17 +82,25 @@ FROM registry.access.redhat.com/ubi9/openjdk-21:1.23
 
 ENV LANGUAGE='en_US:en'
 
+# Diretório de trabalho padrão usado pelo Quarkus
+WORKDIR /deployments
 
-# We make four distinct layers so if there are application changes the library layers can be re-used
+# Copia as partes da aplicação em camadas separadas
 COPY --chown=185 target/quarkus-app/lib/ /deployments/lib/
 COPY --chown=185 target/quarkus-app/*.jar /deployments/
 COPY --chown=185 target/quarkus-app/app/ /deployments/app/
 COPY --chown=185 target/quarkus-app/quarkus/ /deployments/quarkus/
 
-EXPOSE 8080
+## 🔧 ADICIONADO: Copiar application.properties para o local padrão
+#COPY --chown=185 src/main/resources/application.properties /deployments/application.properties
+
+# Expõe a porta usada pela aplicação (ajustada para sua configuração)
+EXPOSE 8081
+
 USER 185
+
+# Define as opções do Java e a aplicação a ser executada
 ENV JAVA_OPTS_APPEND="-Dquarkus.http.host=0.0.0.0 -Djava.util.logging.manager=org.jboss.logmanager.LogManager"
 ENV JAVA_APP_JAR="/deployments/quarkus-run.jar"
 
 ENTRYPOINT [ "/opt/jboss/container/java/run/run-java.sh" ]
-
